feat: add routing and 404 page

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -35,8 +35,8 @@
 
   --section-gap: 160px;
   --vt-c-primary: black;
-  --vt-c-success: #3B8905;
-  --vt-c-danger: #F70808;
+  --vt-c-success: #3b8905;
+  --vt-c-danger: #f70808;
 }
 
 *,
