--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -48,7 +48,7 @@ body {
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    */
-  font-family: "Times New Roman", serif;
+  font-family: "Playfair Display", serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
