feat: add button icons

--- a/frontend/src/assets/headers.css
+++ b/frontend/src/assets/headers.css
@@ -27,3 +27,9 @@ h5 {
   font-weight: normal;
   margin: 0;
 }
+
+.center-text {
+  text-align: center;
+  font-family: Inter, sans-serif;
+  width: 100%;
+}
