--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -31,3 +31,9 @@ main {
   flex-direction: column;
   flex: 1;
 }
+
+.center-text {
+  text-align: center;
+  font-family: Inter, sans-serif;
+  width: 100%;
+}
