--- a/frontend/src/assets/inputs.css
+++ b/frontend/src/assets/inputs.css
@@ -20,8 +20,8 @@ input:focus {
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .slider:hover {
@@ -38,7 +38,6 @@ input:focus {
 }
 
 .slider::-moz-range-thumb {
-  background: #4CAF50;
+  background: #4caf50;
   cursor: pointer;
 }
-
