--- a/frontend/src/assets/headers.css
+++ b/frontend/src/assets/headers.css
@@ -33,3 +33,10 @@ h5 {
   font-family: Inter, sans-serif;
   width: 100%;
 }
+
+@media screen and (max-width: 1000px) {
+  .text-one-line {
+    white-space: nowrap;
+    font-size: 5vw;
+  }
+}
