--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -77,6 +77,15 @@ main {
   margin: 0 0.3rem;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(50, 50, 50, 0.3);
+  border-radius: 5px;
+}
+
 @media screen and (max-width: 600px) {
   .active {
     margin-left: 0;
