--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -45,11 +45,11 @@ body {
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   /*
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-   */
+    font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+      Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+     */
   font-family: "Playfair Display", serif;
-  font-size: 15px;
+  font-size: var(--vt-c--base-font-size);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
