--- a/frontend/src/assets/buttons.css
+++ b/frontend/src/assets/buttons.css
@@ -2,6 +2,7 @@
   font-family: Inter;
   text-transform: uppercase;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .button {
@@ -10,6 +11,16 @@
   font-size: 0.8rem;
   font-family: Inter;
   cursor: pointer;
+}
+
+.button-danger {
+  background-color: #ff0000;
+  color: white;
+}
+
+.button-warning {
+  background-color: #ff8c00;
+  color: white;
 }
 
 .button-text {
