--- a/frontend/src/assets/headers.css
+++ b/frontend/src/assets/headers.css
@@ -34,9 +34,11 @@ h5 {
   width: 100%;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
   .text-one-line {
     white-space: nowrap;
     font-size: 5vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
